--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
@@ -50,4 +51,9 @@
             android:textSize="20sp"
             android:text="Lbs"/>
     </LinearLayout>
+    <Button
+        android:id="@+id/WorkoutTimerActivityNavigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="To Workout Timer"/>
 </LinearLayout>
