--- a/app/src/main/res/layout/activity_workout_timer.xml
+++ b/app/src/main/res/layout/activity_workout_timer.xml
@@ -8,7 +8,11 @@
         android:id="@+id/restTimer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="1:00"/>
+        android:gravity="center"
+        android:textSize="26sp"
+        android:text="1:00"
+        android:clickable="true"
+        android:focusable="false"/>
     <Button
         android:id="@+id/startTimer"
         android:layout_width="match_parent"
