--- a/app/src/main/res/layout/list_item_workout_plan.xml
+++ b/app/src/main/res/layout/list_item_workout_plan.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="horizontal"
+              android:layout_height="0dp"
+              android:orientation="vertical"
+              android:layout_gravity="fill"
               xmlns:android="http://schemas.android.com/apk/res/android">
 
     <TextView
         android:id="@+id/planName"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="0.5"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
     <TextView
         android:id="@+id/planIsShow"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="0.5"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
