--- a/app/src/main/res/layout/list_item_workout_plan.xml
+++ b/app/src/main/res/layout/list_item_workout_plan.xml
@@ -13,4 +13,8 @@
         android:id="@+id/planIsShow"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <Button
+        android:id="@+id/planListNavigationButton"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
