--- a/app/src/main/res/layout/activity_training_plans.xml
+++ b/app/src/main/res/layout/activity_training_plans.xml
@@ -3,14 +3,19 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical" >
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/completePlanList"
+    <FrameLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:divider="#00000000"/>
-    <Button
-        android:id="@+id/newPlanButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="new Plan"/>
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/completePlanList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="#00000000"/>
+        <Button
+            android:id="@+id/newPlanButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="new Plan"/>
+    </FrameLayout>
 </LinearLayout>
