--- a/app/src/main/res/layout/activity_plan_details.xml
+++ b/app/src/main/res/layout/activity_plan_details.xml
@@ -7,6 +7,10 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/planName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/ExerciseList"
             android:layout_width="match_parent"
