--- a/app/src/main/res/layout/activity_plan_details.xml
+++ b/app/src/main/res/layout/activity_plan_details.xml
@@ -10,7 +10,9 @@
         <TextView
             android:id="@+id/planName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textSize="32sp"
+            android:gravity="center"/>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/ExerciseList"
             android:layout_width="match_parent"
@@ -20,6 +22,7 @@
             android:id="@+id/newExerciseButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="new Plan"/>
+            android:layout_gravity="bottom"
+            android:text="New Exercise"/>
     </FrameLayout>
 </LinearLayout>
