--- a/app/src/main/res/layout/activity_training_plans.xml
+++ b/app/src/main/res/layout/activity_training_plans.xml
@@ -16,6 +16,7 @@
             android:id="@+id/newPlanButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:text="new Plan"/>
     </FrameLayout>
 </LinearLayout>
