--- a/app/src/main/res/layout/fragment_exercise_details.xml
+++ b/app/src/main/res/layout/fragment_exercise_details.xml
@@ -1,24 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:minWidth="500dp"
+        android:minHeight="500dp"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/selectedExerciseName"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_gravity="top"
+            android:textSize="32sp"
+            android:gravity="center"/>
 
-    <TextView
-        android:id="@+id/exerciseName"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:textSize="32sp"
-        android:gravity="center"/>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/workoutList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:divider="#00000000"/>
-    <Button
-        android:id="@+id/newWorkoutButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:text="New Set"/>
-</FrameLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/workoutList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="#00000000"/>
+
+        <Button
+            android:id="@+id/newWorkoutButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:text="New Set"/>
+    </LinearLayout>
+</ScrollView>
