--- a/app/src/main/res/layout/list_item_exercise_details.xml
+++ b/app/src/main/res/layout/list_item_exercise_details.xml
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="numberDecimal"
+        android:maxLines="1"
         android:hint="0"/>
 
     <Button
