--- a/app/src/main/res/layout/activity_workout_plan.xml
+++ b/app/src/main/res/layout/activity_workout_plan.xml
@@ -3,9 +3,14 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical" >
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/selectedPlanList"
+    <FrameLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:divider="#00000000"/>
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/selectedPlanList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="#00000000"/>
+    </FrameLayout>
 </LinearLayout>
