--- a/app/src/main/res/layout/activity_starting.xml
+++ b/app/src/main/res/layout/activity_starting.xml
@@ -2,19 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:background="#F9FBE7">
 
     <Button
         android:id="@+id/notificationButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Notification"/>
+        android:layout_gravity="center"
+        android:background="@drawable/round_button"
+        android:text="START" />
 
     <Button
         android:id="@+id/weightInputButton"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+        android:layout_gravity="bottom|center"
         android:text="Go to Weight Input"
         style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"/>
 </LinearLayout>
